--- a/app/src/main/res/drawable/shap_cardview_available_appointment.xml
+++ b/app/src/main/res/drawable/shap_cardview_available_appointment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/cardViewAvailableAppointmentStart"
+        android:startColor="@color/colorPrimary"
         android:endColor="@color/cardViewAvailableAppointmentEnd"
         />
     <corners android:radius="@dimen/_15sdp"/>
