--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pdslogo" />
+        app:srcCompat="@drawable/pdslogo1" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
