--- a/app/src/main/res/layout/cardview_show_report.xml
+++ b/app/src/main/res/layout/cardview_show_report.xml
@@ -141,16 +141,13 @@
             app:layout_constraintStart_toEndOf="@+id/textView_MedicalReport_SuggestedMedication"
             app:layout_constraintTop_toBottomOf="@+id/MedicalReportDoctorsInstructions" />
 
-        <Button
-            android:id="@+id/cardViewAppointment_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_7sdp"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="@string/ShowAppointmentUser_btn_doctorViewInfo"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_14ssp"
-            app:cornerRadius="@dimen/_7sdp"
+        <View
+            android:id="@+id/cardViewAppointment_view"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginBottom="@dimen/_7sdp"
+            android:background="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
